@@ -1,5 +1,8 @@
 Revision history for Perl distribution PathTools.
 
+ - Fixed some issues on QNX/NTO related to paths with double
+   slashes. [Matt Kraai & Nicholas Clark]
+
 3.28_01 - Fri Jul 25 21:18:11 2008
 
  - Fixed and clarified the behavior of splitpath() with a $no_file
